--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sqluser
 spring.datasource.username=sqluser
 spring.datasource.password=password
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
